--- a/bin/control
+++ b/bin/control
@@ -2,7 +2,7 @@
 
 source $OPENSHIFT_CARTRIDGE_SDK_BASH
 
-TYK_DASHBOARD_DASHBOARD_EXEC=$OPENSHIFT_TYK_DIR/versions/$OPENSHIFT_TYK_DASHBOARD_VERSION/tyk-analytics
+TYK_DASHBOARD_DASHBOARD_EXEC="$OPENSHIFT_TYK_DIR/versions/$OPENSHIFT_TYK_DASHBOARD_VERSION/tyk-analytics"
 TYK_DASHBOARD_CONFIG_FILE=$TYK_DASHBOARD_DASHBOARD_EXEC.conf
 TYK_DASHBOARD_LOG_FILE=$OPENSHIFT_LOG_DIR/tyk_dashboard.log
 
